--- a/source/Kalmthout_analyse.Rmd
+++ b/source/Kalmthout_analyse.Rmd
@@ -173,10 +173,7 @@ N.NO2_max <- 0.6 # BVR
 BOD_90p <- 6 # BVR
 COD_90p <- 30 # BVR
 
-T.P <- 0.04 # mg P/L - T'jollyn et al. 2009
-T.P_zomerhalfjaargem <- 0.03 # mg P/L BVR
-
-T.N <- 0.59 # mg N/L - T'jollyn et al. 2009
+T.P_zomerhalfjaargem <- 0.03 # mg P/L BVR 2010
 T.N_zomerhalfjaargem <- 1.3 # mg N/L BVR 2010
 
 # Zoutgehalte
@@ -189,7 +186,6 @@ O2_conc_10p <- 6 # BVR
 O2_verz_max <- 120 # BVR
 
 # Zuurtegraad
-pH_max <- 5.5 # Synbiosys/Runhaar (2008/2009); Van Calster et al., 2020
 pH_max <- 6.5 # BVR 2010
 pH_min <- 4.5 # BVR 2010
 
@@ -283,6 +279,13 @@ for (ID in locaties) {
          filename = paste0("./exports/TP/", ID,"_TP", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
 
+# toetsing MKN-norm
+TP_zomerhalfjaargem <- data %>% filter(AquaComponent %in% "TP") %>%
+  mutate(month = format(FieldSamplingDate, "%m")) %>%
+  filter(month %in% c("04", "05", "06", "07", "08", "09")) %>%
+  group_by(CODE) %>%
+  summarise(TP_zomerhalfjaargem = mean(ResultCalc)) %>%
+  write.csv(file = "./exports/TP_zhjgem.csv")
 ```
 
 
@@ -297,6 +300,14 @@ for (ID in locaties) {
   ggsave(plot = figuur,
          filename = paste0("./exports/TN/", ID,"_TN", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
+
+# toetsing MKN-norm
+TN_zomerhalfjaargem <- data %>% filter(AquaComponent %in% "TN") %>%
+  mutate(month = format(FieldSamplingDate, "%m")) %>%
+  filter(month %in% c("04", "05", "06", "07", "08", "09")) %>%
+  group_by(CODE) %>%
+  summarise(TN_zomerhalfjaargem = mean(ResultCalc)) %>%
+  write.csv(file = "./exports/TN_zhjgem.csv")
 ```
 
 ### Anorganische stikstof
@@ -386,6 +397,11 @@ for (ID in locaties) {
          filename = paste0("./exports/N_anorg(2)/", ID,"_N_anorg2", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
 
+
+data %>%
+  filter(AquaComponent %in% "NO2_N") %>%
+  group_by(CODE) %>%
+  summarise(NO3_N_gem = mean(ResultCalc))
 ```
 
 ## Zuurtegraad
@@ -555,6 +571,13 @@ for (ID in locaties) {
   ggsave(plot = figuur,
          filename = paste0("./exports/Cl/", ID,"_Cl", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
+
+data %>%
+  filter(AquaComponent %in% "Cl") %>%
+  group_by(CODE) %>%
+  summarise(Cl_90p = quantile(ResultCalc, probs = 0.9)) %>%
+  write.csv(file = "./exports/Cl_90p.csv")
+
 ```
 
 
