--- a/source/Kalmthout_analyse.Rmd
+++ b/source/Kalmthout_analyse.Rmd
@@ -155,11 +155,13 @@ maak_plot_1var <- function(dataset, component, title = NULL, xas = "Datum staaln
     filter(AquaComponent %in% component) %>%  
     ggplot(aes(x = FieldSamplingDate, y = ResultCalc, color = CODE)) +
     scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y") + # visualiseert data per maand in format maand-jaar
+    scale_y_continuous(breaks = pretty_breaks(n = 10)) +
     geom_line(linewidth = 1) +
     geom_point() +
     labs(title = title) + xlab(xas) + ylab(yas)
   figuur
 }
+
 ```
 
 # Abiotische bereiken 3160 (watertype Zm/Zs)
@@ -214,13 +216,14 @@ T.P_max %>%
 # plot TP
 ## AN_KAL_003
 maak_plot_1var(data %>% filter(CODE %in% "AN_KAL_003"), "T.P", "Totale fosfor", yas = "Meetwaarde (mg P/L)")
-maak_plot_1var(data, "T.P", "Totale fosfor Kalmthout", yas = "Meetwaarde (mg P/L)")
+maak_plot_1var(data, "TP", "Totale fosfor Kalmthout", yas = "Meetwaarde (mg P/L)")
 
 # plot TN
-maak_plot_1var(data %>% filter(CODE %in% c("AN_KAL_002", "AN_KAL_003")), "T.N", "Totale stikstof", yas = "Meetwaarde (mg N/L)")
+maak_plot_1var(data, "TN", "Totale stikstof Kalmthout", yas = "Meetwaarde (mg N/L)")
 
 # plot anorganische stikstof
 maak_plot(data %>% filter(CODE %in% "AN_KAL_002"), c("NO3", "NO2", "NH4"), "Anorganische stikstof", yas = "Meetwaarde (mg/L)")
+maak_plot_1var(data_met_N_anorg, "N_anorg", "Anorganische stikstof Kalmthout (NH4_N + NO3_N + NO2_N)", yas = "Meetwaarde (mg/L)")
 
 anorg_N <- data %>%
   filter(Component %in% c("NH4", "NO3", "NO2") & FieldSampleID == "AN_KAL_002")
@@ -423,11 +426,16 @@ pH_bereik <- data %>%
             pH_max = max(ResultCalc),
             bereik = paste0(min(ResultCalc), " - ", max(ResultCalc)))
 write.csv(pH_bereik, file = "./exports/pH_bereik.csv")
+
+maak_plot_1var(data, "pH_veld", "Zuurtegraad Kalmthout (MKN minimum - maximum)", yas = "Meetwaarde (pH)") + geom_hline(yintercept = 4.5, color = "black", linetype = "dashed", linewidth = 1) +
+    geom_hline(yintercept = 6.5, color = "black", linetype = "dashed", linewidth = 1)
 ```
 
 
 ## Helderheid (chlorofyl, zwevende stof, secchi)
 ```{r}
+locaties <- unique(data$CODE)
+
 # chlorofyl-a
 for (ID in locaties) {
   figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "CHL.A" , paste("Chlorofyl-a", ID), yas = "Meetwaarde (µg/L)") +
@@ -437,23 +445,32 @@ for (ID in locaties) {
          filename = paste0("./exports/CHL_A/", ID,"_CHL_A", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
 
+maak_plot_1var(data, "chl_a", "chlorofyl-a Kalmthout", yas = "Meetwaarde (µg/L)")
+
 # zwevende stof
 for (ID in locaties) {
-  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "ZS.105" , paste("Zwevende stof (105°C)", ID), yas = "Meetwaarde (g/L)") +
+  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "ZS_105" , paste("Zwevende stof (105°C)", ID), yas = "Meetwaarde (g/L)") +
   scale_y_continuous(breaks = pretty_breaks(n = 10, min.n = 10))
   print(figuur)
   ggsave(plot = figuur,
          filename = paste0("./exports/ZS105/", ID,"_ZS105", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
 
+maak_plot_1var(data, "ZS_105", "Zwevende stof (105°C) Kalmthout", yas = "Meetwaarde (g/L)")
+
+
 # secchi-diepte
 for (ID in locaties) {
-  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "SD.VELD" , paste("Secchi-diepte", ID), yas = "Meetwaarde (m)") +
-  scale_y_continuous(breaks = pretty_breaks(n = 10, min.n = 10))
+  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "SD_veld" , paste("Secchi-diepte", ID, "(+ MKN  zomerhalfjaargemiddelde)"), yas = "Meetwaarde (m)") +
+  scale_y_continuous(breaks = pretty_breaks(n = 10, min.n = 10)) +
+    geom_hline(yintercept = 0.9, color = "black", linetype = "dashed", linewidth = 1)
   print(figuur)
   ggsave(plot = figuur,
          filename = paste0("./exports/Secchi/", ID,"_Secchi", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
+maak_plot_1var(data, "SD_veld", "Secchi-diepte Kalmthout", yas = "Meetwaarde (m)") + 
+  geom_hline(yintercept = 0.9, color = "black", linetype = "dashed", linewidth = 1)
+
 
 # toetsing MKN-norm
 SD_zomerhalfjaargem <- data %>% filter(AquaComponent %in% "SD_veld") %>%
