--- a/source/Kalmthout_analyse.Rmd
+++ b/source/Kalmthout_analyse.Rmd
@@ -405,6 +405,11 @@ data %>%
   filter(AquaComponent %in% "NO2_N") %>%
   group_by(CODE) %>%
   summarise(NO3_N_gem = mean(ResultCalc))
+
+maak_plot_1var(data, "NH4_N", "Ammonium-stikstof Kalmthout", yas = "Meetwaarde (mg N/L)")
+maak_plot_1var(data, "NO3_N", "Nitraat-stikstof Kalmthout", yas = "Meetwaarde (mg N/L)")
+maak_plot_1var(data, "NO2_N", "Nitriet-stikstof Kalmthout", yas = "Meetwaarde (mg N/L)")
+
 ```
 
 ## Zuurtegraad
@@ -468,7 +473,7 @@ for (ID in locaties) {
   ggsave(plot = figuur,
          filename = paste0("./exports/Secchi/", ID,"_Secchi", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
-maak_plot_1var(data, "SD_veld", "Secchi-diepte Kalmthout", yas = "Meetwaarde (m)") + 
+maak_plot_1var(data, "SD_veld", "Secchi-diepte Kalmthout (+ MKN Zomerhalfjaargemiddelde)", yas = "Meetwaarde (m)") + 
   geom_hline(yintercept = 0.9, color = "black", linetype = "dashed", linewidth = 1)
 
 
@@ -486,12 +491,15 @@ SD_zomerhalfjaargem <- data %>% filter(AquaComponent %in% "SD_veld") %>%
 ```{r}
 # concentratie
 for (ID in locaties) {
-  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "O2.VELD" , paste("Zuurstof-concentratie + MKN 10-percentiel", ID), yas = "Meetwaarde (mg/L)") +
+  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "O2_veld" , paste("Zuurstof-concentratie + MKN 10-percentiel", ID), yas = "Meetwaarde (mg/L)") +
   scale_y_continuous(breaks = pretty_breaks(n = 10, min.n = 10)) + geom_hline(yintercept = 6, linewidth = 1, colour = "black", linetype = "dashed")
   print(figuur)
   ggsave(plot = figuur,
          filename = paste0("./exports/O2_conc/", ID,"_O2c", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
+
+maak_plot_1var(data, "O2_veld", "Zuurstofconcentratie Kalmthout (+ MKN 10-percentiel)", yas = "Meetwaarde (mg/L)") + 
+  geom_hline(yintercept = 6, color = "black", linetype = "dashed", linewidth = 1)
 
 # toetsing MKN-normen
 data %>%
@@ -508,6 +516,9 @@ for (ID in locaties) {
   ggsave(plot = figuur,
          filename = paste0("./exports/O2_verz/", ID,"_O2v", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
+
+maak_plot_1var(data, "O2verz", "Zuurstofverzadiging Kalmthout (+ MKN maximum)", yas = "Meetwaarde (%)") + 
+  geom_hline(yintercept = 120, color = "black", linetype = "dashed", linewidth = 1)
 
 # toetsing MKN-normen
 data %>%
@@ -528,6 +539,10 @@ for (ID in locaties) {
          filename = paste0("./exports/Temp/", ID,"_Temp", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
 
+maak_plot_1var(data, "T_veld", "Temperatuur Kalmthout (+ MKN maximum)", yas = "Meetwaarde (°C)") + 
+  geom_hline(yintercept = 25, color = "black", linetype = "dashed", linewidth = 1)
+
+
 Temp_max <- data %>%
   filter(AquaComponent %in% "T_veld") %>%
   group_by(CODE) %>%
@@ -547,6 +562,10 @@ for (ID in locaties) {
   ggsave(plot = figuur,
          filename = paste0("./exports/SO4/", ID,"_SO4", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
+
+maak_plot_1var(data, "SO4", "Sulfaat Kalmthout (+ MKN gemiddelde)", yas = "Meetwaarde (mg/L)") + 
+  geom_hline(yintercept = 15, color = "black", linetype = "dashed", linewidth = 1)
+
 
 # SO4_S
 locaties <- unique(data$CODE)
@@ -573,6 +592,10 @@ for (ID in locaties) {
          filename = paste0("./exports/EGV/", ID,"_EGV", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
 
+maak_plot_1var(data, "EGV25_veld", "Elektrische geleidbaarheid (+ MKN 90-percentiel)", yas = "Meetwaarde (µS/cm)") + 
+  geom_hline(yintercept = 100, color = "black", linetype = "dashed", linewidth = 1)
+
+
 # toetsing MKN-norm
 data %>%
   filter(AquaComponent %in% "EGV25_veld") %>%
@@ -588,6 +611,9 @@ for (ID in locaties) {
   ggsave(plot = figuur,
          filename = paste0("./exports/Cl/", ID,"_Cl", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
 }
+maak_plot_1var(data, "Cl", "Chloride Kalmthout (+ MKN 90-percentiel)", yas = "Meetwaarde (mg/L)") + 
+  geom_hline(yintercept = 20, color = "black", linetype = "dashed", linewidth = 1)
+
 
 data %>%
   filter(AquaComponent %in% "Cl") %>%
