--- a/source/Kalmthout_analyse.Rmd
+++ b/source/Kalmthout_analyse.Rmd
@@ -327,6 +327,8 @@ N_anorg$AquaComponent <- "N_anorg"
 N_anorg$AquaUnit <- "mg N/l"
 N_anorg$Component <- "N_anorg"
 data_met_N_anorg <- bind_rows(data, N_anorg)
+
+write.csv(data_met_N_anorg, file = "./data/Data_Kalmthout_met_Nanorg.csv")
 ```
 
 ```{r}
@@ -410,6 +412,12 @@ maak_plot_1var(data, "NH4_N", "Ammonium-stikstof Kalmthout", yas = "Meetwaarde (
 maak_plot_1var(data, "NO3_N", "Nitraat-stikstof Kalmthout", yas = "Meetwaarde (mg N/L)")
 maak_plot_1var(data, "NO2_N", "Nitriet-stikstof Kalmthout", yas = "Meetwaarde (mg N/L)")
 
+data %>%
+  filter(AquaComponent %in% "NH3" & AquaUnit %in% "mg/L") %>%
+  group_by(CODE) %>%
+  summarise(NO3_gem = mean(ResultCalc),
+            NO3_max = max(ResultCalc)) %>%
+  write.csv(file = "./exports/NH3.csv")
 ```
 
 ## Zuurtegraad
@@ -440,6 +448,17 @@ maak_plot_1var(data, "pH_veld", "Zuurtegraad Kalmthout (MKN minimum - maximum)",
 ## Helderheid (chlorofyl, zwevende stof, secchi)
 ```{r}
 locaties <- unique(data$CODE)
+
+# humuszuren (absorptie_440)
+for (ID in locaties) {
+  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "absorptie_440" , paste("Absorptie_440", ID), yas = "Meetwaarde (ABS)") +
+  scale_y_continuous(breaks = pretty_breaks(n = 10, min.n = 10))
+  print(figuur)
+  ggsave(plot = figuur,
+         filename = paste0("./exports/abs_440/", ID,"_abs_440", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
+}
+
+maak_plot_1var(data, "absorptie_440", "Absorptie (440 nm)", yas = "Meetwaarde (ABS)")
 
 # chlorofyl-a
 for (ID in locaties) {
@@ -476,6 +495,14 @@ for (ID in locaties) {
 maak_plot_1var(data, "SD_veld", "Secchi-diepte Kalmthout (+ MKN Zomerhalfjaargemiddelde)", yas = "Meetwaarde (m)") + 
   geom_hline(yintercept = 0.9, color = "black", linetype = "dashed", linewidth = 1)
 
+# combo
+for (ID in locaties) {
+  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "absorptie_440" , paste("Absorptie_440", ID), yas = "Meetwaarde (ABS)") +
+  scale_y_continuous(breaks = pretty_breaks(n = 10, min.n = 10))
+  print(figuur)
+  ggsave(plot = figuur,
+         filename = paste0("./exports/abs_440/", ID,"_abs_440", ".jpg"), width = 1080, height = 720, units = "px", scale = 3)
+}
 
 # toetsing MKN-norm
 SD_zomerhalfjaargem <- data %>% filter(AquaComponent %in% "SD_veld") %>%
