--- a/source/Kalmthout_analyse.Rmd
+++ b/source/Kalmthout_analyse.Rmd
@@ -267,7 +267,7 @@ locaties <- unique(data$CODE)
 # voor totale fosfor per locatie figuur maken
 for (ID in locaties) {
   data_figuur <- data %>%
-    filter(CODE %in% ID & Component %in% "T.P")
+    filter(CODE %in% ID & Component %in% "TP")
   figuur <- ggplot(data_figuur,
                    aes(x = FieldSamplingDate, y = ResultCalc)) +
     geom_line(linewidth = 1, colour = "orange") +
@@ -300,7 +300,7 @@ TP_zomerhalfjaargem <- data %>% filter(AquaComponent %in% "TP") %>%
 locaties <- unique(data$CODE)
 
 for (ID in locaties) {
-  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "T.N" , paste("Totale stikstof T.N", ID, "+ MKN Zomerhalfjaargemiddelde"), yas = "Meetwaarde (mg N/L)") + geom_hline(yintercept = 1.3, color = "black", linetype = "dashed", linewidth = 1) +
+  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "TN" , paste("Totale stikstof T.N", ID, "+ MKN Zomerhalfjaargemiddelde\n"), yas = "Meetwaarde (mg N/L)") + geom_hline(yintercept = 1.3, color = "black", linetype = "dashed", linewidth = 1) +
   scale_y_continuous(breaks = pretty_breaks(n = 10))
   print(figuur)
   ggsave(plot = figuur,
@@ -331,28 +331,8 @@ N_anorg$AquaUnit <- "mg N/l"
 N_anorg$Component <- "N_anorg"
 data_met_N_anorg <- bind_rows(data, N_anorg)
 
-write.csv(data_met_N_anorg, file = "./data/Data_Kalmthout_met_Nanorg.csv")
+#write.csv(data_met_N_anorg, file = "./data/Data_Kalmthout_met_Nanorg.csv")
 ```
-
-```{r}
-# herordenen van variabelen van groot > klein
-anorg_N_KAL0384 <- data %>%
-  filter(AquaComponent %in% c("NH4_N", "NO3_N", "NO2_N") & FieldSampleID == "ANTKAL0384")
-
-anorg_N_KAL0384$label <- factor(anorg_N_KAL0384$label, unique(anorg_N_KAL0384[order(anorg_N_KAL0384$ResultCalc, decreasing = T), "label"]))
-
-plot1 <- anorg_N_KAL0384 %>%
-  ggplot(aes(x = FieldSamplingDate, y = ResultCalc, fill = label)) +
-  geom_area(position = "identity", alpha = 0.6) +
-  scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y") +
-  labs(title = "Anorganische stikstof (N_anorg = NH4_N + NO3_N + NO2_N)") +
-  xlab("Datum staalname") + 
-  ylab("Meetwaarde (mg N/L)")  + 
-  scale_fill_discrete("Variabelen") + scale_y_continuous(breaks = seq(0,2, by = 0.1))
-plot1
-
-```
-
 
 ```{r}
 # loop
@@ -369,7 +349,7 @@ for (ID in locaties) {
     ggplot(aes(x = FieldSamplingDate, y = ResultCalc, fill = label)) +
     geom_area(position = "identity", alpha = 0.6) +
     scale_x_date(date_breaks = "1 month", date_labels = "%b-%Y") +
-    labs(title = paste("Anorganische stikstof", ID ,"(N_anorg = NH4_N + NO3_N + NO2_N)")) +
+    labs(title = paste("Anorganische stikstof", ID ,"(N_anorg = NH4_N + NO3_N + NO2_N)\n")) +
     xlab("Datum staalname") + 
     ylab("Meetwaarde (mg N/L)")  + 
     scale_fill_discrete("Variabelen") + scale_y_continuous(breaks = pretty_breaks(n = 10, min.n = 10))
