--- a/source/Kalmthout_analyse.Rmd
+++ b/source/Kalmthout_analyse.Rmd
@@ -318,7 +318,7 @@ TP_zomerhalfjaargem <- data %>% filter(AquaComponent %in% "TP") %>%
 locaties <- unique(data$CODE)
 
 for (ID in locaties) {
-  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "TN" , paste("Totale stikstof T.N", ID, "+ MKN Zomerhalfjaargemiddelde\n"), yas = "Meetwaarde (mg N/L)") + geom_hline(yintercept = 1.3, color = "black", linetype = "dashed", linewidth = 1) +
+  figuur <- maak_plot_1var(data %>% filter(CODE %in% ID), "TN" , paste("Totale stikstof TN", ID, "+ MKN Zomerhalfjaargemiddelde\n"), yas = "Meetwaarde (mg N/L)") + geom_hline(yintercept = 1.3, color = "black", linetype = "dashed", linewidth = 1) +
   scale_y_continuous(breaks = pretty_breaks(n = 10))
   print(figuur)
   ggsave(plot = figuur,
