--- a/source/Kalmthout Data-Analyse.Rmd
+++ b/source/Kalmthout Data-Analyse.Rmd
@@ -108,8 +108,16 @@ data_KAL_temp <- data_KAL %>%
   mutate(ResultCalc = ifelse(grepl("<", ResultFormatted), 
                              as.numeric(gsub("<", "", ResultFormatted)) / 2, # als operator <, deel waarde door 2
                              as.numeric(gsub(">", "", ResultFormatted)))) # als > of geen operator, neem waarde over
-```
 
+data_KAL_temp <- data_KAL %>%
+  mutate(ResultCalc = case_when(
+    AquaComponent %in% c("SO4_S", "NH4_N") ~ as.numeric(ResultFormattedNumeric),
+    grepl("<", ResultFormatted) ~ as.numeric(gsub("<", "", ResultFormatted)) / 2,
+    TRUE ~ as.numeric(gsub(">", "", ResultFormatted))
+  ))
+
+
+```
 
 
 ## Anorganische data berekenen
